Fix logo spacing

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ body {
 .sign-in-logo-area {
     display: flex;
     justify-content: left;
+    margin-left: 30px;
     flex: 1;
 }
 
